Operator log serialization broken for sets #37903

Closed
opened 2013-12-20 21:07:20 +01:00 by CodeManX · 6 comments
Member

Blender Version
Broken: blender-2.69-testbuild1 (r60355)
Worked: blender-2.67-r58051

Short description of error
Operators log properties wrong for sets, they will end with syntax errors if copy and pasted to script/pyconsole.

Exact steps for others to reproduce the error

  • Open default scene
  • Enter edit mode
  • Sort mesh elements
  • See operator log
  • Shift+Click in redo panel to select multiple elements
  • See operator log again

2.67:

bpy.ops.mesh.sort_elements(type='MATERIAL', elements={'VERT'}, reverse=True, seed=0)
bpy.data.window_managers["WinMan"].(null) = {'VERT', 'EDGE'} # Note: this shouldn't be logged at all I guess?
bpy.ops.mesh.sort_elements(type='MATERIAL', elements={'VERT', 'EDGE'}, reverse=True, seed=0)

2.69:

bpy.ops.mesh.sort_elements(type='VIEW_XAXIS', elements={, 'VERT'}, reverse=True)
bpy.data.window_managers["WinMan"].(null) = {, 'VERT', 'EDGE'}
bpy.ops.mesh.sort_elements(type='VIEW_XAXIS', elements={, 'VERT', 'EDGE'}, reverse=True)

Another example:

bpy.data.window_managers["WinMan"].addon_support = {, 'OFFICIAL', 'COMMUNITY', 'TESTING'}

The elements-set starts with a comma in 2.69!

**Blender Version** Broken: blender-2.69-testbuild1 (r60355) Worked: blender-2.67-r58051 **Short description of error** Operators log properties wrong for sets, they will end with syntax errors if copy and pasted to script/pyconsole. **Exact steps for others to reproduce the error** - Open default scene - Enter edit mode - Sort mesh elements - See operator log - Shift+Click in redo panel to select multiple elements - See operator log again 2.67: ``` bpy.ops.mesh.sort_elements(type='MATERIAL', elements={'VERT'}, reverse=True, seed=0) bpy.data.window_managers["WinMan"].(null) = {'VERT', 'EDGE'} # Note: this shouldn't be logged at all I guess? bpy.ops.mesh.sort_elements(type='MATERIAL', elements={'VERT', 'EDGE'}, reverse=True, seed=0) ``` 2.69: ``` bpy.ops.mesh.sort_elements(type='VIEW_XAXIS', elements={, 'VERT'}, reverse=True) bpy.data.window_managers["WinMan"].(null) = {, 'VERT', 'EDGE'} bpy.ops.mesh.sort_elements(type='VIEW_XAXIS', elements={, 'VERT', 'EDGE'}, reverse=True) ``` # Another example: ``` bpy.data.window_managers["WinMan"].addon_support = {, 'OFFICIAL', 'COMMUNITY', 'TESTING'} ``` The elements-set starts with a comma in 2.69!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @CodeManX

Added subscriber: @CodeManX

This issue was referenced by blender/blender-addons-contrib@14c9899a69

This issue was referenced by blender/blender-addons-contrib@14c9899a69c24aa457b700d2f0a20c8077538092

This issue was referenced by blender/blender@14c9899a69

This issue was referenced by blender/blender@14c9899a69c24aa457b700d2f0a20c8077538092

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@14c9899a69.

Closed by commit blender/blender@14c9899a69.
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#37903
No description provided.