Fix T37903: Operator log serialization broken for sets.

Was a mistake in rB9d6f05ed style edits (TRUE became false ;) ).